# insightops-ai

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_TREE.txt  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-tests.yml
apps/api/: Dockerfile
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: health.py  router.py
apps/api/app/api/v1/endpoints/: auth.py  documents.py  rag.py  reconciliation.py  sql_agent.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  document.py  document_chunk.py  document_page.py  document_processing_run.py  reconciliation_finding.py  reconciliation_run.py  review_task.py  user.py  workspace.py
apps/api/app/schemas/: __init__.py  auth.py  document.py  document_processing.py  rag.py  reconciliation.py  sql_agent.py  user.py
apps/api/app/services/: __init__.py  auth.py  document_processing.py  documents.py  extraction.py  policy_field_extraction.py  policy_reconciliation.py  rag_answering.py  rag_chunking.py  rag_embeddings.py  rag_indexing.py  rag_retrieval.py  reconciliation_reports.py  reconciliation_rules.py  sql_agent_executor.py  sql_agent_guardrails.py  sql_agent_planner.py  sql_agent_schema.py  storage.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 210abddf7a2d_create_workspace_and_insurance_tables.py  221dccc688e2_add_document_storage_table.py  2c7555a2f07f_add_reconciliation_and_review_tables.py  73489dd9db67_add_document_processing_and_extraction_.py  9ad7c5264d6e_add_user_authentication_table.py  a1e98c5322a5_add_document_chunks_and_vector_.py
apps/frontend/: Dockerfile  index.html  package.json  tsconfig.tsbuildinfo
apps/frontend/src/: App.tsx  index.css  main.tsx  styles.css
apps/frontend/src/api/: client.ts  tokenStorage.ts
apps/frontend/src/features/auth/: AuthContext.tsx  LoginPage.tsx  authApi.ts
apps/frontend/src/features/dashboard/: DashboardPage.tsx
apps/frontend/src/features/documents/: DocumentsWorkspace.tsx  ExtractionReview.tsx  UploadDocumentModal.tsx  documentsApi.ts
apps/frontend/src/features/rag/: RAGWorkspace.css  RAGWorkspace.tsx  ragApi.ts
apps/frontend/src/features/reconciliation/: ReconciliationWorkspace.css  ReconciliationWorkspace.tsx  reconciliationApi.ts
apps/frontend/src/features/sqlAgent/: SQLAnalystWorkspace.css  SQLAnalystWorkspace.tsx  sqlAgentApi.ts
apps/frontend/src/types/: auth.ts  document.ts  health.ts  rag.ts  reconciliation.ts  sqlAgent.ts
docs/: folder-structure.md
project-status/: day-01-code-status.md
scripts/: seed_demo_data.py
tests/integration/: test_auth_api.py  test_document_processing_api.py  test_documents_api.py  test_reconciliation_api_integration.py  test_sql_agent_api_integration.py  test_sql_agent_executor_integration.py
tests/unit/: test_auth_schemas.py  test_auth_service.py  test_document_extraction.py  test_document_extraction_models.py  test_document_model.py  test_document_processing.py  test_document_validation.py  test_health.py  test_model_metadata.py  test_policy_field_extraction.py  test_policy_reconciliation.py  test_rag_answering.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_indexing.py  test_rag_retrieval.py  test_reconciliation_models.py  test_reconciliation_reports.py  test_reconciliation_rules.py  test_security.py  test_sql_agent_executor.py  test_sql_agent_guardrails.py  test_sql_agent_planner.py  test_sql_agent_schema.py  test_storage.py  test_synthetic_data.py  test_user_model.py
workers/: celery_app.py  document_tasks.py  health_tasks.py
