[build-system]
requires = [
    "setuptools>=75.0",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "insightops-ai"
version = "0.1.0"
description = "Agentic Business Intelligence and Document Intelligence Platform"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Validation and configuration
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2,<3.0",

    # Database and migrations
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",

    # Authentication
    "PyJWT>=2.10,<3.0",
    "pwdlib[argon2]>=0.3,<1.0",
    "python-multipart>=0.0.20,<1.0",

    # Background processing
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Object storage and HTTP
    "minio>=7.2.0",
    "httpx>=0.27.0",

    # PDF and OCR extraction
    "pymupdf>=1.26.0,<2.0.0",
    "pytesseract>=0.3.13,<1.0.0",
    "Pillow>=10.4.0,<13.0.0",

    # CSV and spreadsheet extraction
    "pandas>=2.2.0,<4.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "xlrd>=2.0.1,<3.0.0",

    # RAG and vector search
    "pgvector>=0.5.0,<0.6.0",
    "fastembed>=0.8.0,<0.9.0",

    # Safe SQL Agent parsing and validation
    "sqlglot>=30.13.0,<31.0.0",

    "xlsxwriter>=3.2,<4.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]


[tool.setuptools.packages.find]
where = ["."]

include = [
    "apps*",
    "workers*",
    "packages*",
]

exclude = [
    "tests*",
    "data*",
    "infrastructure*",
]

namespaces = true


[tool.pytest.ini_options]
pythonpath = [
    ".",
]

testpaths = [
    "tests",
]


[tool.ruff]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]


[tool.mypy]
python_version = "3.12"
strict = true
